--- a/Menu_Bot_Java/.classpath
+++ b/Menu_Bot_Java/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="src/jsoup-1.12.1.jar"/>
+	<classpathentry kind="lib" path="src/javax.mail.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
