--- a/Menu_Bot_Java/.classpath
+++ b/Menu_Bot_Java/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-12">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
@@ -8,5 +8,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="src/jsoup-1.12.1.jar"/>
 	<classpathentry kind="lib" path="src/javax.mail.jar"/>
+	<classpathentry kind="lib" path="src/activation.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
